# htmx-axum-hello-world

./: Cargo.toml  README.md
.github/workflows/: axum.yml
assets/: main.css
src/: main.rs
templates/components/: click.html
templates/layouts/: base.html
templates/pages/: home.html
